Grace/tests/gibbs/errors/t254.grace
// ERROR = P1004
if((6 * 9) == 42) {

print "Nom"
